--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Бородинский",
   "main": "gruntfile.js",
   "scripts": {
-    "test": "test"
+    "build": "gulp build",
+    "start": "npm run build && gulp serve"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,25 @@
   },
   "homepage": "https://github.com/dramaretskiy/barbershop-adaptive#readme",
   "dependencies": {
+    "gulp-cli": "^2.0.1",
+    "gulp-util": "^3.0.8",
     "package": "^1.0.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.24.5",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-less": "^3.5.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^7.0.1",
+    "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^1.3.0",
+    "gulp-svgstore": "^6.1.1",
+    "gulp-uglify": "^3.0.0",
+    "posthtml-include": "^1.2.0",
+    "run-sequence": "^2.2.1"
   }
 }
