--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-less": "^3.5.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.3.0",
-    "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
     "posthtml-include": "^1.2.0",
     "run-sequence": "^2.2.1"
